# flat_ffi_example

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  azure-pipelines.yml  data.fbs  flat.cpp  requirements.txt  test.py
ci/: Dockerfile  Makefile
